#
# some news ... see also TODO for hints
#


2021-05-08 -> add some userfunctions

2021-05-05 -> some approvements (debugging mode)

2021-05-04 -> send data/nibble (debugging mode)

2021-05-03 -> send data (debugging mode)

2021-05-01 -> documentation adds
	      try to init lcd (debugging mode)

2021-04-30 -> license topics

2021-04-24 -> first release

2021-04-23 -> setup initial parts of the repository