@@ -1,0 +1,56 @@
+LCD 2004 I2C modul
+==================
+
+This is all content around the LCD handler.
+
+[Background infos](../Documentation/knowledge_base.md).
+
+The basic interface are make targets:
+
+    +-----------------------------------------------------------+
+    |                                                           |
+    |                  Nothing to build                         |
+    |                                                           |
+    +-----------------------------------------------------------+
+    | Example:                                                  |
+    | make                    -> build all                      |
+    | make clean              -> clean all                      |
+    | make distclean          -> clean and uninstall            |
+    | make install            -> install bin to $(HOME)/bin     |
+    |                            $(HOME)/bin                    |
+    | make uninstall          -> remove bin from $(HOME)/bin    |
+    +-----------------------------------------------------------+
+
+WARNING: This is work in progress! Don't expect things to be complete in any dimension.
+
+If you face a bug, then pls use https://github.com/tjohann/ambient_tracking_with_raspi/issues to create an ticket.
+
+
+Requirement
+-----------
+
+To build everthing, you need libbaalue (https://github.com/tjohann/libbaalue).
+
+
+Display
+-------
+
+I use one of the very common LCD2004 displays, connected to the raspi via I2C modul (see http://wiki.sunfounder.cc/index.php?title=I2C_LCD2004 as an example).
+
+
+Funcions
+--------
+
+t.b.d.
+
+
+Start and usage
+---------------
+
+t.b.d.
+
+
+Configuraion
+------------
+
+t.b.d.
